--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ input {
 
 input:focus {
   outline: none;
+  background-color: rgb(251, 252, 252);
 }
 .icons {
     height: 30px;
@@ -47,7 +48,7 @@ input:focus {
   background-color: beige;
 }
 .search-returns {
-  width: 335px;
+  width: 350px;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
@@ -56,6 +57,8 @@ input:focus {
   height: 200px;
   overflow: hidden;
   overflow-y: auto;
+  margin-top: 6px;
+  padding-top: 0.2rem;
 }
 a {
   text-decoration: none;
@@ -65,11 +68,11 @@ a {
   padding: 0.5rem 1rem;
   margin: 0px;
   border-bottom: 1px solid rgba(175, 166, 166, 0.185);
-  background-color: rgb(246, 248, 248);
+  background-color: white;
   margin: 0.2rem 0px;
 
 }
 
 .texts:hover {
-  background-color: rgba(229, 237, 238, 0.753);
+  background-color: rgba(242, 246, 247, 0.753);
 }
